Обновление версии JPrime 2024.01